Brushed off first integration test suite

--- a/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
+++ b/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IT1_UserInterface.cs" />
+    <Compile Include="IT1_UserInterface_Buttons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
