--- a/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
+++ b/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT1_UserInterface.cs" />
+    <Compile Include="IT2_UserInterface_Door.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
