--- a/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
+++ b/MicrowaveOven.Test.Integration/MicrowaveOven.Test.Integration.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IT5_Light.cs" />
     <Compile Include="IT6_Timer.cs" />
     <Compile Include="IT7_Powertube.cs" />
+    <Compile Include="IT8_Output.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
